# poison-guard

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: async_await.rs  lazy.rs  mutex.rs
src/: guard.rs  lib.rs  poison.rs  tests.rs
src/poison/: error.rs  guard.rs  mod.rs  recover.rs  scope.rs
src/tests/: guard.rs  lazy.rs  mod.rs  mutex.rs  poison.rs  poison_on_unwind.rs  poison_unless_recovered.rs
tests/ui/pass/: diag_catch_unwind.rs  diag_new_catch_unwind_panic.rs  diag_poison_not_recovered.rs  diag_poison_panic.rs  diag_poison_static.rs  diag_static_new_catch_unwind_panic.rs  diag_try_catch_unwind.rs  diag_try_new_catch_unwind_err.rs  diag_try_new_catch_unwind_panic.rs  diag_try_recover_err.rs  diag_try_with.rs  diag_try_with_catch_unwind_err.rs  diag_try_with_catch_unwind_panic.rs
